--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Website hosted on github</h1>
+    <h1>Welcome to my Website, this is where I upload my games</h1>
 </body>
 </html>
