--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sw Carters Game Page: Welcome!</h1>
-    <iframe src="https://discord.gg/pBxwZbXcVq" width="100%" height="560" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/channel/UCOYmejJAbkSQ0KrsYzQyZAw/about" width="100%" height="560" frameborder="0"></iframe>
 </body>
 </html>
