create index.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Carter's Games</title>
 </head>
 <body>
-    <h1>Sw Carters Game Page: Welcome!</h1>
-    <iframe src="https://www.youtube.com/channel/UCOYmejJAbkSQ0KrsYzQyZAw/about" width="100%" height="560" frameborder="0"></iframe>
+    <h1>Welcome to Sw Carter's Website!</h1>
+    <h2>Here on this website, I will upload game downloads and information.</h2>
+    <h3>Template Downloads:</h3>
+    <a href="data/hevy_Next_Gen_Temp.psd">Next Gen Chevy</a>
+    <a href="data/ord_Next_Gen_Temp.psd">Next Gen Ford</a>
+    <a href="data/oyota_Next_Gen_Temp.psd">Next Gen Toyota</a>
 </body>
 </html>
