create index.html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to Sw Carter's Website!</h1>
-    <h2>Here on this website, I will upload game <b>downloads</b> and information.</h2>
+    <h2>Here on this website, I will upload game downloads and information.</h2>
 </body>
 </html>
