create index.html file

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carter's Games</title>
+    <style type="text/css">
+        body
+        {
+            padding: 0;
+            margin:0;
+            background: #0062ff
+        }
+        h1
+        {
+            font-size: 5em;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            font-family: 'arial';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Sw Carter's Website!</h1>
-    <h2>Here on this website, I will upload game downloads and information.</h2>
+    <h1>Welcome!</h1>
 </body>
 </html>
