--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
         h1
         {
+            text-emphasis-color: #464646;
             font-size: 5em;
             margin: 0;
             padding: 0;
