create index.html file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Sw Gaming!</h1>
+    <h1>SW GAMING ™</h1>
+    <a href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</a>
 </body>
 </html>
