--- a/index.html
+++ b/index.html
@@ -25,9 +25,29 @@
             transform: translateX(-50%) translateY(-50%);
         }
     </style>
+        <style type="text/css">
+            body
+            {
+                padding: 0;
+                margin:0;
+                background: #cbee03
+            }
+            h2
+            {
+                font-size: 5em;
+                margin: 0;
+                padding: 0;
+                text-align: center;
+                font-family: 'arial';
+                position: absolute;
+                top: 85%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+            }
+        </style>
 </head>
 <body>
     <h1>SW GAMING ™</h1>
-    <a href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</a>
+    <h2 href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</h2>
 </body>
 </html>
