create index.html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 margin:0;
                 background: #cbee03
             }
-            h2
+            a
             {
                 font-size: 5em;
                 margin: 0;
@@ -48,6 +48,6 @@
 </head>
 <body>
     <h1>SW GAMING ™</h1>
-    <h2 href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</h2>
+    <a href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</a>
 </body>
 </html>
