--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 text-align: center;
                 font-family: 'arial';
                 position: absolute;
-                top: 85%;
+                top: 70%;
                 left: 50%;
                 transform: translateX(-50%) translateY(-50%);
             }
@@ -48,6 +48,6 @@
 </head>
 <body>
     <h1>SW GAMING ™</h1>
-    <a href="Data/BeamMP_Installer.zip" download="BeamMP.zip">Download BeamMP</a>
+    <a href="Data/NEXTGEN.zip" download="NextGenTemplate.zip">Download NEXTGEN Template</a>
 </body>
 </html>
