create index.html file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </head>
 <body>
     <h1>SW GAMING ™</h1>
-    <a href="Data/NEXTGEN.zip" download="NextGenTemplate.zip">Download NEXTGEN Template</a>
+    <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>
 </body>
 </html>
