create index.html file

--- a/index.html
+++ b/index.html
@@ -5,49 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carter's Games</title>
-    <style type="text/css">
-        body
-        {
-            padding: 0;
-            margin:0;
-            background: #cbee03
-        }
-        h1
-        {
-            font-size: 5em;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            font-family: 'arial';
-            position: absolute;
-            top: 35%;
-            left: 50%;
-            transform: translateX(-50%) translateY(-50%);
-        }
-    </style>
-        <style type="text/css">
-            body
-            {
-                padding: 0;
-                margin:0;
-                background: #cbee03
-            }
-            a
-            {
-                font-size: 5em;
-                margin: 0;
-                padding: 0;
-                text-align: center;
-                font-family: 'arial';
-                position: absolute;
-                top: 65%;
-                left: 50%;
-                transform: translateX(-50%) translateY(-50%);
-            }
-        </style>
 </head>
 <body>
     <h1>SW GAMING ™</h1>
-    <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>
+    <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>\
+    <div class="hero">
+        <a href="#" class="scroll-down">
+            <div class="mouse">
+                <span></span>
+            </div>
+            <div class="arrow">
+                <span></span>
+            </div>
+        </a>
+    </div>
 </body>
 </html>
