create index.html file

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             margin:0;
             background: #cbee03
         }
-        h1
+        a
         {
-            font-size: 5em;
+            font-size: 10em;
             margin: 0;
             padding: 0;
             text-align: center;
@@ -25,29 +25,9 @@
             transform: translateX(-50%) translateY(-50%);
         }
     </style>
-        <style type="text/css">
-            body
-            {
-                padding: 0;
-                margin:0;
-                background: #cbee03
-            }
-            a
-            {
-                font-size: 5em;
-                margin: 0;
-                padding: 0;
-                text-align: center;
-                font-family: 'arial';
-                position: absolute;
-                top: 65%;
-                left: 50%;
-                transform: translateX(-50%) translateY(-50%);
-            }
-        </style>
 </head>
 <body>
-    <h1>SW GAMING ™</h1>
+    <a>SW GAMING ™</a>
     <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>\
 </body>
 </html>
