--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 </head>
 <body>
     <h1>SW GAMING ™</h1>
+    <h6>Bottom Text?</h6>
     <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>\
 </body>
 </html>
