--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         h1
         {
-            font-size: 25em;
+            font-size: 10em;
             margin: 0;
             padding: 0;
             text-align: center;
@@ -46,9 +46,31 @@
             }
         </style>
     </style>
+</style>
+<style type="text/css">
+    body
+    {
+        padding: 0;
+        margin:0;
+        background: #cbee03
+    }
+    h6
+    {
+        font-size: 1em;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        font-family: 'arial';
+        position: absolute;
+        top: 200%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+    }
+</style>
 </head>
 <body>
     <h1>SW GAMING ™</h1>
+    <h6>Bottom text?</h6>
     <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>\
 </body>
 </html>
