--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </style>
 </head>
 <body>
-    <h1>SW GAMING ™</h1>
+    <h1>Stock Car Dev Studios</h1>
     <h6>Bottom text?</h6>
     <a href="Data/NEXTGEN.rar" download="NextGenTemplate.rar">Download NEXTGEN Template</a>\
 </body>
